[package]
name = "pingora-s2n"
version = "0.5.0"
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/cloudflare/pingora"
categories = ["asynchronous", "network-programming"]
keywords = ["async", "tls", "ssl", "pingora"]
description = """
S2N async APIs for Pingora.
"""

[lib]
name = "pingora_s2n"
path = "src/lib.rs"

[dependencies]
log = "0.4.21"
pingora-error = {version = "0.5.0", path = "../pingora-error"}
ring = "0.17.12"
s2n-tls = "=0.3.22"
s2n-tls-sys = "0.3.22"
s2n-tls-tokio = "=0.3.22"
no_debug = "3.1.0"
